2005-02-01 23:40 Gregory John Casamento <greg_casamento@yahoo.com>

	* Version 0.9.0

2005-01-31 23:34 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormClassManager.m: Corrected bug#11778.  Added code which
	removes connections when a class is being reparsed.
	* GormFilePrefsManager.m: Updated file prefs with new version.
	* GormInfo.plist: Updated plist with new version.

2005-01-31 01:33 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m: In the -[GormDocument removeConnections:..]
	methods corrected a problem with removing a connector while 
	enumerating throught the list of connectors.  This was causing 
	the process to miss some of the connections which should have 
	been removed.  
	* Gorm.m: -[Gorm stopConnecting]: Properly reset the 
	connectionSource and connectionDestination with the connecting
	process is stopped.  Correction for bug#11777.
	* GormObjectEditor.m: -[GormObjectEditor removeAllInstancesOfClass:]
	correct problem where all instances were not being removed.

2005-01-30 14:34 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormObjCHeaderParser/GNUmakefile: Added new files.
	* GormObjCHeaderParser/OCClass.m: Uses lookAhead function
	* GormObjCHeaderParser/OCIVarDecl.m: Uses lookAhead function
	* GormObjCHeaderParser/OCIVar.m: Uses lookAhead function
	* GormObjCHeaderParser/ParserFunctions.[hm]: New functions for
	use by the class parser.
	* Resources/GormDocument.gorm: Corrected background color.

2005-01-30 00:33 Gregory John Casamento <greg_casamento@yahoo.com>

	* GNUmakefile: Build new file.
	* NSColorWell+GormExtensions.[hm]: Category which allows the 
	setting of a color into a color well without invoking the action
	associated with that control.
	* Palettes/1Windows/main.m: Include new extension.
	* Palettes/2Controls/inspectors.m: Include new extension.
	* Palettes/3Containers/inspectors.m: Include new extension.
	* Palettes/4Data/inspectors.m: Include new extension.
